--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
-    <title>Showing the map</title>
+    <meta property="og:title" content="restaurant map" />
+    <meta property="og:description" content="A test website for spartacoding" />
+    <meta property="og:image" content="{{ url_for('static', filename='banner(1).jpg) }}" />
+
+    <title>Showing the map </title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet" />
